--- a/app/views/postings/my_stuff.html.erb
+++ b/app/views/postings/my_stuff.html.erb
@@ -1,5 +1,10 @@
-<h1>I Need</h1>
-<%= render :partial => 'postings/list', :object => @requests, :as => :postings %>
+<%= link_to 'I Need', new_posting_path(:have_need => 'need'), :rel => 'facebox', :class => 'button' %>
+<div id="need">
+  <%= render :partial => 'postings/list', :object => @requests, :as => :postings %>
+</div>
 
-<h1>I Have</h1>
-<%= render :partial => 'postings/list', :object => @inventory, :as => :postings %>
+<%= link_to 'I Have', new_posting_path(:have_need => 'have'), :rel => 'facebox', :class => 'button' %>
+<div id="have">
+  <%= render :partial => 'postings/list', :object => @inventory, :as => :postings %>
+</div>
+
