--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -6,4 +6,4 @@
 
 <%= render :partial => 'form' %>
 
-<div id="loading"><%= image_tag 'loading.gif' %></div>
+<div id="loading"><%= image_tag 'loading.gif' %> Sending message...</div>
