--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -24,5 +24,5 @@
   <% end %>
 <% end %>
 
-<div id="loading"><%= image_tag 'loading.gif' %></div>
+<div id="loading"><%= image_tag 'loading.gif' %> Sending message...</div>
 
