Added delayed jobs for heroku

--- a/app/views/home/application.js.erb
+++ b/app/views/home/application.js.erb
@@ -10,7 +10,7 @@ $(document).ready(function() {
     closeImage   : '<%= image_path "closelabel.png" %>'
   });
   
-  $('form').submit(function () {
-    $('#loading').show();
-  });
+//  $('form').submit(function () {
+//    $('#loading').show();
+//  });
 });
