--- a/app/views/home/application.js.erb
+++ b/app/views/home/application.js.erb
@@ -10,7 +10,14 @@ $(document).ready(function() {
     closeImage   : '<%= image_path "closelabel.png" %>'
   });
   
-//  $('form').submit(function () {
-//    $('#loading').show();
-//  });
+  //google analytics
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-10595318-9']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
 });
