--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -1,29 +1,22 @@
 <%= form_for(@community) do |f| %>
-  <% if @community.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@community.errors.count, "error") %> prohibited this community from being saved:</h2>
-
-      <ul>
-      <% @community.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+  <%= f.errors %>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %><br/>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :zip_code %><br />
+    <%= f.label :zip_code %><br/>
     <%= f.text_field :zip_code %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
+    <%= f.label :description %><br/>
     <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= f.label :emails %><br/>
   </div>
   <div class="actions">
     <%= f.submit %>
+    <%= text_area_tag 'emails' %>
   </div>
 <% end %>
