--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     <div id="footer" class="span-24 last">
       <p>
         <%= link_to 'Provide Feedback!', feedback_path, :rel => 'facebox' %><br/>
-        Copyright 2011 Green Gorillas
+        Copyright 2011 Green Gorillaz LLC
       </p>
     </div>
   </div>
