--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,6 +1,3 @@
 <h1>Editing community</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @community %> |
-<%= link_to 'Back', communities_path %>
+<%= render 'communities/form' %>
