--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,27 +1,15 @@
-<h1>Listing communities</h1>
+<%= link_to 'New Community', new_community_path, :class => 'button', :rel => 'facebox' %>
 
-<table>
-  <tr>
+<table id="communities_list" class="ui-widget ui-widget-content">
+  <tr class="ui-widget-header">
     <th>Name</th>
-    <th>Zip code</th>
     <th>Description</th>
-    <th></th>
-    <th></th>
+    <th>Zip Code</th>
     <th></th>
   </tr>
 
 <% @communities.each do |community| %>
-  <tr>
-    <td><%= community.name %></td>
-    <td><%= community.zip_code %></td>
-    <td><%= community.description %></td>
-    <td><%= link_to 'Show', community %></td>
-    <td><%= link_to 'Edit', edit_community_path(community) %></td>
-    <td><%= link_to 'Destroy', community, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+  <%= raw(community_table_row(community)) %>
 <% end %>
 </table>
 
-<br />
-
-<%= link_to 'New Community', new_community_path %>
