--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_include_tag application_js_path %>
+
 <h1>New community</h1>
 
-<%= render 'form' %>
+<%= render 'communities/form' %>
+
