--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -10,11 +10,9 @@
       <%= f.hidden_field :have_need, :value => 'need' %>
     <% end %>
     <%= f.text_field :description, :placeholder => 'e.g. one ring to rule them all...' %>
-    <br/>
-    available from <%= f.text_field :from_date, :placeholder => 'optional date', :class => 'date' %>
-    to <%= f.text_field :to_date, :placeholder => 'optional date', :class => 'date' %>.
   </p>
   <%= f.hidden_field :user_id, :value => current_user.id %>
+  <%= f.hidden_field :community_id, :value => 1 %>
   <div class="actions">
     <%= f.submit 'Post', :class => 'button' %>
   </div>
