--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -10,4 +10,6 @@
   <% end %>
 </div>
 
+<%= will_paginate @postings %>
 <%= render :partial => 'postings/list', :object => @postings, :as => :postings %>
+<%= will_paginate @postings %>
