--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
   <div class="container">
     <div id="page" class="span-24 last">
       <div id="content">
-        <% if notice %><p id="notice"><%= notice %></p><% end %>
+        <p id="notice"><%= notice %></p>
         <%= yield %>  
       </div>
     </div>
