--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -18,7 +18,7 @@ div.field, div.actions { margin-bottom: 10px; }
 
 #notice {
   color: #99cd68;
-  margin-bottom: 5px;
+  margin: 0 0 10px 0;
 }
 
 #notice a {
@@ -159,7 +159,7 @@ div.field, div.actions { margin-bottom: 10px; }
 
 .container #content {
   background: white;
-  padding: 20px;
+  padding: 10px 20px 20px 20px;
 	-moz-border-radius: 10px 10px 10px 10px;
 	border-radius: 10px 10px 10px 10px;
 	border-width: 3px;
