Added more code for handling communities

--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @community, :remote => true do |f| %>
   <%= f.error_messages %>
+  <% if action_name == 'new' %>
   <div class="field">
     <%= f.label :name %><br/>
     <%= f.text_field :name %>
@@ -8,15 +9,18 @@
     <%= f.label :zip_code %><br/>
     <%= f.text_field :zip_code %>
   </div>
+  <% end %>
   <div class="field">
     <%= f.label :description %><br/>
-    <%= f.text_field :description %>
+    <%= f.text_area :description %>
   </div>
+  <% if action_name == 'new' %>
   <div class="field">
     <%= f.label :emails, 'User emails' %> (comma separated)<br/>
     <%= text_area_tag 'emails' %>
   </div>
   <%= f.hidden_field :user_id, :value => current_user.id %>
+  <% end %>
   <div class="actions">
     <%= f.submit action_name == 'new' ? 'Create' : 'Update', :class => 'button' %>
   </div>
