--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,5 +1,5 @@
 <%= javascript_include_tag application_js_path %>
 
-<h1>Editing community</h1>
+<h1>Edit community</h1>
 
 <%= render 'communities/form' %>
