--- a/app/views/memberships/create.js.erb
+++ b/app/views/memberships/create.js.erb
@@ -1,13 +1,2 @@
-<% if @community.errors.any? %>
-  $('#new_community_form').html('<%= escape_javascript(render :partial => 'communities/form') %>');
-<% else %>
-  $.facebox.close();
-  $('#notice').html('Community added.');
-  $('#communities_list > tbody > tr:first').after('<tr id="community_<%= @community.id %>"><%= escape_javascript(raw(community_table_row(@community))) %></tr>');
-  $('.buttonset').buttonset();
-  $('a[rel*=facebox]').facebox({
-    loadingImage : '<%= image_path('loading.gif') %>',
-    closeImage   : '<%= image_path('closelabel.png') %>'
-  });
-<% end %>
-
+$('#notice').html('Membership to <%= @membership.community.name %> requested.');
+$('#community_<%= @membership.community_id %>').replaceWith('<%= raw(escape_javascript(community_table_row(@membership.community)))%>');
