--- a/app/views/postings/update.js.erb
+++ b/app/views/postings/update.js.erb
@@ -3,7 +3,7 @@
 <% else %>
   $.facebox.close();
   $('#notice').html('Posting updated.');
-  $('#posting_<%= @posting.id %>').html('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
+  $('#posting_<%= @posting.id %>').replaceWith('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
   $('.buttonset').buttonset();
   $('a[rel*=facebox]').facebox({
     loadingImage : '<%= image_path('loading.gif') %>',
