--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,23 +1,26 @@
 <%= link_to 'New Community', new_community_path, :class => 'button', :rel => 'facebox' %>
 
 <% if not @invitations.empty? %>
-<table id="invitation_list" class="ui-widget ui-widget-content">
-  <tr class="ui-widget-header">
-    <th>Name</th>
-    <th>Description</th>
-    <th>Zip Code</th>
-    <th></th>
-  </tr>
+<div id="invitations">
+  <h2>Invitations</h2>
+  <table id="invitation_list" class="ui-widget ui-widget-content">
+    <tr class="ui-widget-header">
+      <th>Name</th>
+      <th>Description</th>
+      <th>Zip Code</th>
+      <th></th>
+    </tr>
 
-<% @invitations.each do |invitation| %>
-  <%= raw(invitation_table_row(invitation)) %>
+  <% @invitations.each do |invitation| %>
+    <%= raw(invitation_table_row(invitation)) %>
+  <% end %>
+  </table>
+  <br/>
+  <h2>Communities</h2>
+</div>
 <% end %>
-</table>
 
-<br/>
-<% end %>
-
-<table id="communities_list" class="ui-widget ui-widget-content">
+<table id="community_list" class="ui-widget ui-widget-content">
   <tr class="ui-widget-header">
     <th>Name</th>
     <th>Description</th>
