--- a/app/views/invitations/accept.js.erb
+++ b/app/views/invitations/accept.js.erb
@@ -1,4 +1,4 @@
-$('#notice').html('<%= escape_javascript(@invitation.community.name) %> joined.');
+$('#notice').html('Joined <%= escape_javascript(@invitation.community.name) %>.');
 $('#invitation_<%= @invitation.id %>').remove();
 if ($('#invitation_list tr').length == 1) {
   $('#invitations').remove();
