--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <div id="search">
-  <% form_tag request.path, :method => :get do %>
+  <%= form_tag request.path, :method => :get do %>
     <%= text_field_tag 'search', nil, :placeholder => 'search term here' %>
   <% end %>
 </div>
