--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,6 +1,3 @@
-<%= javascript_include_tag application_js_path %>
-
 <h1>New community</h1>
 
-<%= render 'communities/form' %>
-
+<div id="new_community_form"><%= render 'communities/form' %></div>
