--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag application_js_path %>
+
 <%= form_for @posting, :remote => true do |f| %>
   <%= f.error_messages  %>
   <p>
