--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -20,19 +20,23 @@
 </div>
 <% end %>
 
-<h2>My Communites</h2>
-<%= render :partial => 'communities/list', :object => @my_communities, :as => :communities %>
+<div id="my_communities">
+  <h2>My Communites</h2>
+  <%= render :partial => 'communities/list', :object => @my_communities, :as => :communities %>
+</div>
 
 <br/>
 
-<h2>All Communities</h2>
+<div id="all_communities">
+  <h2>All Communities</h2>
 
-<div id="search">
-  <%= form_tag request.path, :method => :get do %>
-    <%= text_field_tag 'search', nil, :placeholder => 'search term here' %>
-  <% end %>
+  <div id="search">
+    <%= form_tag request.path, :method => :get do %>
+      <%= text_field_tag 'search', nil, :placeholder => 'search term here' %>
+    <% end %>
+  </div>
+
+  <%= will_paginate @all_communities %>
+  <%= render :partial => 'communities/list', :object => @all_communities, :as => :communities %>
+  <%= will_paginate @all_communities %>
 </div>
-
-<%= will_paginate @all_communities %>
-<%= render :partial => 'communities/list', :object => @all_communities, :as => :communities %>
-<%= will_paginate @all_communities %>
