--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag application_js_path %>
+
 <%= form_for @user, :remote => true do |f| %>
   <%= f.error_messages %>
   <div class="field">
@@ -24,4 +26,3 @@
     <%= f.submit "Register", :class => 'button' %>
   </div>
 <% end %>
-
