--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -18,18 +18,19 @@
   <%= @community.zip_code %>
 </p>
 
-<h2>Active Members</h2>
-<%= will_paginate @members, :page_param => :mem_page %>
-<div id="members">
-  <%= render :partial => 'memberships/list', :object => @members, :as => :memberships %>
-</div>
-<%= will_paginate @members, :page_param => :mem_page %>
-
-<br/>
-
-<h2>Join Requests</h2>
-<%= will_paginate @requests, :page_param => :req_page %>
+<% unless @requests.empty? %>
 <div id="requests">
-  <%= render :partial => 'memberships/list', :object => @requests, :as => :memberships %>
+  <h2>Join Requests</h2>
+  <%= will_paginate @requests, :page_param => :req_page %>
+    <%= render :partial => 'memberships/list', :object => @requests, :as => :memberships %>
+  <%= will_paginate @requests, :page_param => :req_page %>
+  <br/>
 </div>
-<%= will_paginate @requests, :page_param => :req_page %>
+<% end %>
+
+<div id="members">
+  <h2>Active Members</h2>
+  <%= will_paginate @members, :page_param => :mem_page %>
+    <%= render :partial => 'memberships/list', :object => @members, :as => :memberships %>
+  <%= will_paginate @members, :page_param => :mem_page %>
+</div>
