--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag application_js_path %>
+<%= javascript_include_tag 'application' %>
 
 <%= form_for @community, :remote => true do |f| %>
   <%= f.error_messages %>
