--- a/app/views/feedback/index.html.erb
+++ b/app/views/feedback/index.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag application_js_path %>
+<%= javascript_include_tag 'application' %>
 
 <h1>Penny for Your Thoughts?</h1>
 
