--- a/app/views/notifier/offer.html.erb
+++ b/app/views/notifier/offer.html.erb
@@ -1,6 +1,6 @@
 Hi <%= @to_user.first_name %>,<br/><br/>
 
-<% if @posting.have_need == 'have' %>
+<% if @posting.have %>
   <%= @from_user.full_name %> would like to borrow <%= @posting.description %> from you.
 <% else %>
   <%= @to_user.full_name %> saw you needed <%= @posting.description %> and would like to help you out.
