--- a/app/views/postings/create.js.erb
+++ b/app/views/postings/create.js.erb
@@ -1,13 +1,15 @@
-<% if @posting.errors.any? %>
-  $('#new_posting_form').html('<%= escape_javascript(render :partial => 'postings/form') %>');
-<% else %>
-  $.facebox.close();
-  $('#notice').html('Posting added to <%= escape_javascript link_to('your stuff', my_stuff_postings_path) %>.');
-  $('#<%= @posting.have_need %> > table > tbody > tr:first').after('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
-  $('.buttonset').buttonset();
-  $('a[rel*=facebox]').facebox({
-    loadingImage : '<%= image_path('loading.gif') %>',
-    closeImage   : '<%= image_path('closelabel.png') %>'
-  });
+<%= remotipart_response do %>
+  <% if @posting.errors.any? %>
+    $('#new_posting_form').html('<%= escape_javascript(render :partial => 'postings/form') %>');
+  <% else %>
+    $.facebox.close();
+    $('#notice').html('Posting added to <%= escape_javascript link_to('your stuff', my_stuff_postings_path) %>.');
+    $('#<%= @posting.have ? 'have' : 'need' %> > table > tbody > tr:first').after('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
+    $('.buttonset').buttonset();
+    $('a[rel*=facebox]').facebox({
+      loadingImage : '<%= image_path('loading.gif') %>',
+      closeImage   : '<%= image_path('closelabel.png') %>'
+    });
+  <% end %>
 <% end %>
 
