--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -1,14 +1,10 @@
-<%= javascript_include_tag application_js_path %>
+<%= javascript_include_tag 'application' %>
 
 <div id="posting_info">
   <p>
     <%= @posting.user.full_name %>
-    <%= @posting.have_need == 'have' ? 'has' : 'needs' %>
+    <%= @posting.have ? 'has' : 'needs' %>
     <%= @posting.description %>
-    <% unless @posting.from_date.blank? and @posting.to_date.blank? %>
-      <br/>
-      from <%= @posting.from_date %> to <%= @posting.to_date %>
-    <% end %>
   </p>
 </div>
 
@@ -17,10 +13,10 @@
 <% else %>
   <%= form_tag email_posting_path, :remote => true do %>
     <%= text_area_tag 'message', nil, :placeholder => 'Enter optional message to user...' %>
-    <% if @posting.have_need == 'need' %>
+    <% unless @posting.have %>
       <%= check_box_tag 'add_to_inventory' %>Add this item to your inventory?<br/>
     <% end %>
-    <%= submit_tag @posting.have_need == 'have' ? 'Send Request' : 'Send Offer', :class => 'button' %>
+    <%= submit_tag @posting.have ? 'Send Request' : 'Send Offer', :class => 'button' %>
   <% end %>
 <% end %>
 
