--- a/app/views/postings/_list.html.erb
+++ b/app/views/postings/_list.html.erb
@@ -2,6 +2,7 @@
   <tr class="ui-widget-header">
     <th>Description</th>
     <th>User</th>
+    <th>Price</th>
     <th></th>
     <th></th>
   </tr>
