--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
   <%= stylesheet_link_tag 'facebox', :media => 'screen' %>
   <%= stylesheet_link_tag 'custom-theme/jquery-ui-custom.css' %>
   <%= stylesheet_link_tag 'main' %>
-  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js', 
-    'jquery-ui-custom.min', 'rails', 'facebox', 'application' 
+  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js',
+    'jquery-ui-custom.min', 'rails', 'https://github.com/malsup/form/raw/master/jquery.form.js',
+    'jquery.remotipart', 'facebox', 'application' 
   %>
   <%= yield :head %>
   <%= csrf_meta_tag %>
