--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -20,7 +20,7 @@
     </div>
   </div>
   <%= f.label 'Post on' %>
-  <% current_user.communities.each do |community| %>
+  <% current_user.active_communities.each do |community| %>
     <div class ="field">
       <%= check_box_tag "posting[community_ids][]", community.id, @posting.communities.include?(community) %>
       <%= community.name %>
