--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -22,7 +22,10 @@
   <%= f.label 'Post on' %>
   <% current_user.active_communities.each do |community| %>
     <div class ="field">
-      <%= check_box_tag "posting[community_ids][]", community.id, @posting.communities.include?(community) %>
+      <%= check_box_tag "posting[community_ids][]", community.id, 
+          (action_name == 'new' ? true : @posting.communities.include?(community)), 
+          :id => "community_#{community.id}"
+      %>
       <%= community.name %>
     </div>
   <% end %>
@@ -32,4 +35,3 @@
     <%= f.submit 'Post', :class => 'button' %>
   </div>
 <% end %>
-
