--- a/app/views/postings/my_stuff.html.erb
+++ b/app/views/postings/my_stuff.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'I Need', new_posting_path(:have_need => 'need'), :rel => 'facebox', :class => 'button' %>
+<%= link_to 'I Need', new_posting_path(:have => 0), :rel => 'facebox', :class => 'button' %>
 <div id="need">
   <%= will_paginate @requests, :param_name => 'req_page' %>
   <%= render :partial => 'postings/list', :object => @requests, :as => :postings %>
@@ -7,7 +7,7 @@
 
 <br/>
 
-<%= link_to 'I Have', new_posting_path(:have_need => 'have'), :rel => 'facebox', :class => 'button' %>
+<%= link_to 'I Have', new_posting_path(:have => 1), :rel => 'facebox', :class => 'button' %>
 <div id="have">
   <%= will_paginate @inventory, :param_name => 'inv_page' %>
   <%= render :partial => 'postings/list', :object => @inventory, :as => :postings %>
