--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -64,7 +64,7 @@ div.field, div.actions { margin-bottom: 10px; }
 
 #header { 
   width: 100%;
-  height: 125px;
+  height: 117px;
   background-color: #6699ce;
 }
 
@@ -76,9 +76,9 @@ div.field, div.actions { margin-bottom: 10px; }
 
 #header_content img {
   width: 449px;
-  height: 60px;
-  margin-top: 21px;
-  padding: 10px;
+  height: 85px;
+  margin-top: 15px;
+  padding: 0;
   background-color: #404040;
 	-moz-border-radius: 10px 10px 10px 10px;
 	border-radius: 10px 10px 10px 10px;
