--- a/app/views/communities/_list.html.erb
+++ b/app/views/communities/_list.html.erb
@@ -1,7 +1,7 @@
 <table id="community_list" class="ui-widget ui-widget-content">
   <tr class="ui-widget-header">
     <th>Name</th>
-    <th>Description</th>
+<!--    <th>Description</th>-->
     <th>Zip Code</th>
     <th>Status</th>
     <th></th>
