Fixed communities request js response and request_accepted email

--- a/app/views/notifier/request_accepted.html.erb
+++ b/app/views/notifier/request_accepted.html.erb
@@ -2,6 +2,7 @@ Hi <%= @membership.user.first_name %>!<br/><br/>
 
 You have been accepted to the <%= @membership.community.name %> Shareon.it community!
 Postings from the new community will automatically be active the next time you log in.
+You can check out your active communities <%= link_to 'here', communities_url %>.
 <br/><br/>
 
 Happy sharing!<br/>
