--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,13 @@
   <title>Shareon.it</title>
   <%= stylesheet_link_tag 'blueprint/screen.css', :media => 'screen, projection' %>
   <%= stylesheet_link_tag 'blueprint/print.css', :media => 'print' %>
-  <!–[if IE]><%= stylesheet_link_tag 'blueprint/ie.css', :media => 'screen, projection' %><![endif]–>
-  <%= stylesheet_link_tag 'facebox', :media => 'screen' %>
+  <!–-[if IE]><%= stylesheet_link_tag 'blueprint/ie.css', :media => 'screen, projection' %><![endif]-–>
+  <%= stylesheet_link_tag 'fancybox' %>
   <%= stylesheet_link_tag 'custom-theme/jquery-ui-custom.css' %>
   <%= stylesheet_link_tag 'main' %>
   <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js',
-    'jquery-ui-custom.min', 'rails', 'https://github.com/malsup/form/raw/master/jquery.form.js',
-    'jquery.remotipart', 'facebox', 'application' 
+    'jquery.ui-custom.min', 'rails', 'https://github.com/malsup/form/raw/master/jquery.form.js',
+    'jquery.remotipart', 'jquery.easing', 'jquery.fancybox', 'application'
   %>
   <%= yield :head %>
   <%= csrf_meta_tag %>
