--- a/app/views/postings/email.js.erb
+++ b/app/views/postings/email.js.erb
@@ -1,3 +1,3 @@
 $('#loading').hide();
-$.facebox.close();
+$.fancybox.close();
 $('#notice').html('Message sent to <%= @posting.user.full_name %>.');
