Added truncation for description text.

--- a/app/views/communities/_list.html.erb
+++ b/app/views/communities/_list.html.erb
@@ -1,7 +1,6 @@
-<table id="community_list" class="ui-widget ui-widget-content">
+<table class="community_list ui-widget ui-widget-content">
   <tr class="ui-widget-header">
     <th>Name</th>
-<!--    <th>Description</th>-->
     <th>Zip Code</th>
     <th>Status</th>
     <th></th>
