--- a/app/views/invitations/accept.js.erb
+++ b/app/views/invitations/accept.js.erb
@@ -4,5 +4,5 @@ $('#community_<%= @invitation.community.id %>').remove();
 if ($('#invitation_list tr').length == 1) {
   $('#invitations').remove();
 }
-$('#my_communities > #community_list > tbody > tr:first').after('<%= escape_javascript(raw(community_table_row(@invitation.community))) %>');
+$('#my_communities tr:first').after('<%= escape_javascript(raw(community_table_row(@invitation.community))) %>');
 $('.buttonset').buttonset();
