--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <%= stylesheet_link_tag 'main' %>
   <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js',
     'jquery.ui-custom.min', 'rails', 'https://github.com/malsup/form/raw/master/jquery.form.js',
-    'jquery.remotipart', 'jquery.easing', 'jquery.fancybox', 'application'
+    'jquery.remotipart', 'jquery.easing', 'jquery.fancybox', 'jquery.truncator', 'application'
   %>
   <%= yield :head %>
   <%= csrf_meta_tag %>
