--- a/app/views/memberships/_list.html.erb
+++ b/app/views/memberships/_list.html.erb
@@ -1,4 +1,4 @@
-<table id="membership_list" class="ui-widget ui-widget-content">
+<table class="membership_list ui-widget ui-widget-content">
   <tr class="ui-widget-header">
     <th>Name</th>
     <th>Email</th>
