--- a/app/views/postings/_list.html.erb
+++ b/app/views/postings/_list.html.erb
@@ -1,4 +1,4 @@
-<table id="posting_list" class="ui-widget ui-widget-content">
+<table class="posting_list ui-widget ui-widget-content">
   <tr class="ui-widget-header">
     <th>Description</th>
     <th>User</th>
