--- a/app/views/postings/update.js.erb
+++ b/app/views/postings/update.js.erb
@@ -10,5 +10,6 @@
 		'transitionOut'	:	'elastic',
 		'showNavArrows': false 
   });
+  $('tr td:first-child').truncate({max_length: 75});
 <% end %>
 
