--- a/app/views/postings/_form.html.erb
+++ b/app/views/postings/_form.html.erb
@@ -3,8 +3,8 @@
 <%= form_for @posting, :html => { :multipart => true }, :remote => true do |f| %>
   <%= f.error_messages  %>
   <div class="field">
-    <%= f.label (params[:have] == '1' ? 'I have' : 'I need') %><br/>
-    <%= f.text_field :description, :placeholder => 'e.g. one ring to rule them all...' %>
+    <%= f.label :description, (params[:have] == '1' ? 'I have' : 'I need') %><br/>
+    <%= f.text_area :description, :placeholder => 'e.g. one ring to rule them all...' %>
   </div>
   <div class="field">
     <%= f.label :photo %><br/>
