--- a/app/views/postings/create.js.erb
+++ b/app/views/postings/create.js.erb
@@ -3,7 +3,7 @@
     $('#new_posting_form').html('<%= escape_javascript(render :partial => 'postings/form') %>');
   <% else %>
     $.fancybox.close();
-    $('#notice').html('Posting added to <%= escape_javascript link_to('your stuff', my_stuff_postings_path) %>.');
+    $('#notice').html('Posting added. Check it out in <%= escape_javascript link_to('my stuff', my_stuff_postings_path) %>.');
     $('#<%= @posting.have ? 'have' : 'need' %> > table > tbody > tr:first').after('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
     $('.buttonset').buttonset();
     $('a[rel*=facebox]').fancybox({
@@ -11,5 +11,6 @@
 		  'transitionOut'	:	'elastic',
 		  'showNavArrows': false 
     });
+    $('tr td:first-child').truncate({max_length: 75});
   <% end %>
 <% end %>
