--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,6 +25,10 @@ div.field, div.actions { margin-bottom: 10px; }
   color: #99cd68;
 }
 
+#notice a:hover {
+  color: #6699ce;
+}
+
 .field_with_errors {
   padding: 2px;
   background-color: red;
