Added validation for pictures and resize function for fancybox to be called when there are form errors.

--- a/app/views/communities/create.js.erb
+++ b/app/views/communities/create.js.erb
@@ -1,5 +1,6 @@
 <% if @community.errors.any? %>
   $('#new_community_form').html('<%= escape_javascript(render :partial => 'communities/form') %>');
+  resize_fancybox();
 <% else %>
   $.fancybox.close();
   $('#notice').html('Community added.');
