--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -8,10 +8,12 @@
 %>
 </div>
 
+<div id="description">
 <p>
   <b>Description:</b>
   <%= @community.description %>
 </p>
+</div>
 
 <p>
   <b>Zip code:</b>
