--- a/app/views/postings/create.js.erb
+++ b/app/views/postings/create.js.erb
@@ -1,6 +1,7 @@
 <%= remotipart_response do %>
   <% if @posting.errors.any? %>
     $('#new_posting_form').html('<%= escape_javascript(render :partial => 'postings/form') %>');
+    resize_fancybox();
   <% else %>
     $.fancybox.close();
     $('#notice').html('Posting added.');
