--- a/app/views/postings/update.js.erb
+++ b/app/views/postings/update.js.erb
@@ -1,5 +1,6 @@
 <% if @posting.errors.any? %>
   $('#edit_posting_form').html('<%= escape_javascript(render :partial => 'postings/form') %>');
+  resize_fancybox();
 <% else %>
   $.fancybox.close();
   $('#notice').html('Posting updated.');
