--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,6 +1,7 @@
 $('#loading').hide();
 <% if @user.errors.any? %>
   $('#new_user_form').html('<%= escape_javascript(render :partial => 'users/form') %>');
+  resize_fancybox();
 <% else %>
   $.fancybox.close();
   window.location.replace('<%= session[:return_to].nil? ? root_path : session[:return_to] %>');
