--- a/app/views/postings/create.js.erb
+++ b/app/views/postings/create.js.erb
@@ -5,7 +5,7 @@
   <% else %>
     $.fancybox.close();
     $('#notice').html('Posting added.');
-    $('#<%= @posting.have ? 'have' : 'need' %> > table > tbody > tr:first').after('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
+    $('#<%= @posting.have ? 'have' : 'want' %> > table > tbody > tr:first').after('<%= escape_javascript(raw(posting_table_row(@posting))) %>');
     $('.buttonset').buttonset();
     $('a[rel*=facebox]').fancybox({
 	    'transitionIn'	:	'elastic',
