--- a/app/views/postings/index.html.erb
+++ b/app/views/postings/index.html.erb
@@ -1,7 +1,7 @@
 <% if action_name == 'requests' %>
-  <%= link_to 'Create New Request', new_posting_path(:have => 0), :rel => 'facebox', :class => 'button' %>
+  <%= link_to 'I Want', new_posting_path(:have => 0), :rel => 'facebox', :class => 'button' %>
 <% else %>
-  <%= link_to 'Add to Inventory', new_posting_path(:have => 1), :rel => 'facebox', :class => 'button' %>
+  <%= link_to 'I Have', new_posting_path(:have => 1), :rel => 'facebox', :class => 'button' %>
 <% end %>
 
 <div id="search">
@@ -10,7 +10,7 @@
   <% end %>
 </div>
 
-<div id="<%= action_name == 'requests' ? 'need' : 'have' %>">
+<div id="<%= action_name == 'requests' ? 'want' : 'have' %>">
   <%= will_paginate @postings %>
   <%= render :partial => 'postings/list', :object => @postings, :as => :postings %>
   <%= will_paginate @postings %>
