--- a/app/views/postings/show.html.erb
+++ b/app/views/postings/show.html.erb
@@ -3,7 +3,7 @@
 <div id="posting_info">
   <p>
     <%= @posting.user.full_name %> 
-    <%= @posting.have ? 'has' : 'needs' %>
+    <%= @posting.have ? 'has' : 'wants' %>
     <%= @posting.description %>
   </p>
 </div>
